<resources>
    <string name="app_name" translatable="false">VMPortCheck</string>
    <string name="action_settings">Settings</string>
    <string name="vm_check_ports" translatable="false">VM Check Ports</string>
    <string name="name">Name</string>
    <string name="lblTitle" translatable="false"> VM Check Ports</string>
    <string name="txtURL" translatable="false">google.com</string>
    <string name="txtPort" translatable="false">80</string>
    <string name="lblURL">Host</string>
    <string name="lblPort">Port</string>
    <string name="lblPortIsOpen">Port status</string>
    <string name="lblClear" translatable="false">X</string>
    <string name="check_label">check</string>
    <string name="txtMyIP">Click to get your public IP</string>
    <string name="setPublicIP" translatable="false">___.___.___.___</string>
    <string name="interrogation" translatable="false">\?</string>
    <string name="obtaining">Obtaining status...</string>
    <string name="invalid">Invalid</string>
    <string name="changeHost">Change host and try again</string>
    <string name="invalidHost">Invalid host!</string>
    <string name="port">Port</string>
    <string name="isOpenStr">is open on</string>
    <string name="isClosedStr">is closed or no response from host</string>

</resources>
